feat(navigation): 新增麵包屑導航組件並統一所有文章頁面導航體驗
- 新增 src/components/Breadcrumb.astro 多語言麵包屑組件
- BlogLayout 集成麵包屑導航
- 所有文章頁面統一使用 BlogLayout 支持麵包屑
- 響應式設計與無障礙支持
- docs/breadcrumb-navigation.md 說明文檔

--- a/src/pages/zh/movie-review/一个人的武林.md
+++ b/src/pages/zh/movie-review/一个人的武林.md
@@ -1,8 +1,13 @@
 ---
-title: 一个人的武林
-导演: 陈德森
-主演: 甄子丹, 王宝强
-testPost: true
+layout: ../../../layouts/BlogLayout.astro
+title: 一個人的武林 - 電影評論
+pubDate: 2024-06-24
+description: 甄子丹主演的動作電影一個人的武林評論
+author: ccc333bbb
+language: zh
+status: published
+category: "movie-review"
+tags: ["action", "kung-fu", "donnie-yen", "martial-arts"]
 ---
 
 > **注意：** 此文章仅作测试用途，非真实用户观影心得。
