--- a/src/pages/tw/movie-review/一個人的武林.md
+++ b/src/pages/tw/movie-review/一個人的武林.md
@@ -1,8 +1,13 @@
 ---
-title: 一個人的武林
-Director: 陳德森
-Starring: 甄子丹, 王寶強
-testPost: true
+layout: ../../../layouts/BlogLayout.astro
+title: 一個人的武林 - 電影評論
+pubDate: 2024-06-24
+description: 甄子丹主演的動作電影一個人的武林評論
+author: ccc333bbb
+language: tw
+status: published
+category: "movie-review"
+tags: ["action", "kung-fu", "donnie-yen", "martial-arts"]
 ---
 
 > **注意：** 此文章僅作測試用途，非真實用戶觀影心得。
