fix(navigation): 修正麵包屑導航語言顯示與CSS樣式問題
- 為所有文章frontmatter補上正確的lang欄位(en/zh/tw)
- 優化麵包屑CSS樣式，修正對齊與間距問題
- 調整BlogLayout確保麵包屑不壓到內文
- 改善響應式設計，支援各種螢幕尺寸
- 確保所有語言版本文章都有正確的麵包屑導航

--- a/src/pages/tw/movie-review/一個人的武林.md
+++ b/src/pages/tw/movie-review/一個人的武林.md
@@ -5,6 +5,7 @@ pubDate: 2024-06-24
 description: 甄子丹主演的動作電影一個人的武林評論
 author: ccc333bbb
 language: tw
+lang: tw
 status: published
 category: "movie-review"
 tags: ["action", "kung-fu", "donnie-yen", "martial-arts"]
