--- a/src/pages/zh/movie-review/一个人的武林.md
+++ b/src/pages/zh/movie-review/一个人的武林.md
@@ -5,6 +5,7 @@ pubDate: 2024-06-24
 description: 甄子丹主演的動作電影一個人的武林評論
 author: ccc333bbb
 language: zh
+lang: zh
 status: published
 category: "movie-review"
 tags: ["action", "kung-fu", "donnie-yen", "martial-arts"]
