feat(entertainment): 將觀影心得擴展為娛樂分享功能
- 重命名目錄結構：movie-review -> entertainment
- 添加多種娛樂內容分類：電影、電視劇、小說、漫畫、動畫、遊戲等
- 實現內容分類展示系統，按類型分組顯示
- 添加評分功能，支持1-5星評分系統
- 更新導航配置，統一三個語言版本
- 創建示例內容展示不同分類功能
- 優化頁面設計，添加分類圖標和計數
- 擴展內容類型定義，支持rating屬性

--- a/src/pages/tw/entertainment/一個人的武林.md
+++ b/src/pages/tw/entertainment/一個人的武林.md
@@ -7,7 +7,8 @@ author: ccc333bbb
 language: tw
 lang: tw
 status: published
-category: "movie-review"
+category: "movie"
+rating: 4.2
 tags: ["action", "kung-fu", "donnie-yen", "martial-arts"]
 ---
 
@@ -18,3 +19,10 @@ tags: ["action", "kung-fu", "donnie-yen", "martial-arts"]
 電影中精彩的打鬥場面和對武術精神的深刻反思給我留下了深刻的印象。甄子丹和王寶強的表演非常出色，完美展現了武術精神的核心。
 
 我的觀影感受是這不僅僅是一部動作片，更是對武術精神和人生追求的深刻思考。
+
+**評分：4.2/5 星**
+
+**推薦理由：**
+- 精彩的武術動作設計
+- 深刻的武術精神思考
+- 優秀的演員表演
